envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      envoy.filters.network.http_connection_manager:
        stat_prefix: ingress_http
        codec_type: AUTO
        route_config:
          name: local_route
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
            - match: { prefix: "/" }
              route:
                cluster: blindsided_backend
            cors:
              allow_origin_string_match:
              - safe_regex: { google_re2: {}, regex: ".*" }
              allow_methods: GET, PUT, DELETE, POST, OPTIONS
              allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
              expose_headers: grpc-status,grpc-message
        http_filters:
        - name: envoy.filters.http.grpc_web
        - name: envoy.filters.http.cors
        - name: envoy.filters.http.router
  clusters:
  - name: blindsided_backend
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    http2_protocol_options: {}
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: blindsided_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # This must match your service-node Service name in K8s
                address: service-node-svc 
                port_value: 50052
